[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.theme" type="Theme" id=2]
[ext_resource path="res://scripts/StatisticsScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 50.0
content_margin_right = 50.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 50.0
content_margin_right = 50.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.560784, 0.552941, 0.552941, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -340.0
margin_right = 600.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1200.0
margin_bottom = 680.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Kwerenda..."
override_selected_font_color = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1200.0
margin_bottom = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 149.0
margin_right = 449.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 6
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "Wykonaj"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 751.0
margin_right = 1051.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 6
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "Zapisz do pliku"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 1200.0
margin_bottom = 626.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 1188.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_right = 128.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ID"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Header2" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "IMIÄ˜"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Header3" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NAZWISKO"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Header4" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 396.0
margin_right = 524.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KLASA"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Header5" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 528.0
margin_right = 656.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ROK SZKOLNY"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Header6" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 660.0
margin_right = 788.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DATA"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Header7" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 792.0
margin_right = 920.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GODZINA"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Header8" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 924.0
margin_right = 1052.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "WYNIK"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Header9" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 1056.0
margin_right = 1184.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ZALICZENIE"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 104.0
margin_right = 128.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 132.0
margin_top = 104.0
margin_right = 260.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
clip_text = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 264.0
margin_top = 104.0
margin_right = 392.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 396.0
margin_top = 104.0
margin_right = 524.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
clip_text = true

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 528.0
margin_top = 104.0
margin_right = 656.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
clip_text = true

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 660.0
margin_top = 104.0
margin_right = 788.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
clip_text = true

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 792.0
margin_top = 104.0
margin_right = 920.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
clip_text = true

[node name="Label8" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 924.0
margin_top = 104.0
margin_right = 1052.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
clip_text = true

[node name="Label9" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 1056.0
margin_top = 104.0
margin_right = 1184.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
clip_text = true

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 350.0
margin_top = 630.0
margin_right = 850.0
margin_bottom = 680.0
rect_min_size = Vector2( 500, 50 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 9 )
text = "WyjdÅº"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
